--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,7 @@
         <!-- Right Image -->
         <img src="<%= CLOUDFRONT_HOST %>/images/giftcards_main.jpg" class="ls-l" style="top:50%; left:70%;" alt="Image layer">
 
+
         
         
         <!-- Left Text -->
@@ -52,12 +53,13 @@
         <p class="ls-l visible-lg visible-md" style="width:500px;top:75%; left:80px;font-size:medium;color:white">
             Start typing and select the retailer on your gift card.</p>
         
-        <h3 class="ls-l subtitle strong-400" style="width:500px;top:80%; left:80px;">Check your gift card balance instantly.</h3>
-        
-       
+        <h3 class="ls-l subtitle strong-400" style="width:500px;top:80%; left:80px;">Check your gift card balance instantly.
+
+        </h3>
+
 
     </div>
-
+ 
 </div>
 </section>
 
@@ -439,9 +441,15 @@
                     <h3 class="section-title left"><span>Our partners</span></h3><br/><br/>
                 </div>
                 <div class="row">
-                    
-                    <div class="col-md-3 visible-lg visible-md">
-                        
+                     
+
+
+                    <div class="col-md-3 col-md-offset-1">
+                        <div class="client">
+                            <a href="http://blackhawknetwork.com/" target="_blank">
+                                <img src="images/Blackhawk_Network_Partner.jpg" class="img-responsive" alt="">
+                            </a>
+                        </div>
                     </div>
 
                     <div class="col-md-3">
@@ -462,9 +470,7 @@
                         </div>
                     </div>
 
-                     <div class="col-md-3 visible-lg visible-md">
-                        
-                    </div>
+                    
                     
                 </div>
             </div>
