--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -271,6 +271,9 @@ try {
                 if (ui.item.id != 85)
                 {
                     window.location.href = "/giftcard/new/" + ui.item.id;
+                } else
+                {
+                 window.location.href = "/donate/new?merchantid=" + ui.item.id;   
                 }
      
             }
