modified code for bhn errors

--- a/app/views/giftcard/_giftcard_form.html.erb
+++ b/app/views/giftcard/_giftcard_form.html.erb
@@ -48,6 +48,8 @@ end
                     name="merchant"
                     id="merchant"
                     value="<%= selectedmerchantname %>">
+                    
+                    <input type="hidden" id="merchantnametypes" name="merchantnametypes"/>
                                          
                     <%= f.hidden_field :merchantid %>                                             
                 </label>
