--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,7 +81,7 @@ ul.ui-autocomplete {
 
         <div class="alert alert-info fade in" style="text-align:center">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-            <%= flash[:notice] %>
+            <%= flash[:notice].html_safe %>
         </div>
 
       <% end %>
