--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,8 +17,8 @@
         
         
         <!-- Left Text -->
-        <h3 class="ls-l title title-sm strong" style="width:550px; top:15%; left:80px;">Donate Your Unused Gift Cards</h3>
-        <h3 class="ls-l subtitle strong-400" style="width:500px;top:35%; left:80px;">Never let your gift cards go to waste!<br/>Donate your unused gift cards to your favorite cause and feel good about it.</h3>
+        <h3 class="ls-l title title-sm strong" style="width:550px; top:15%; left:80px;">Donate Your Partially-Used<br/>Gift Cards</h3>
+        <h3 class="ls-l subtitle strong-400" style="width:500px;top:35%; left:80px;">Never let your gift cards go to waste!<br/>Donate your Partially-Used gift cards to your favorite cause and feel good about it.</h3>
         
         <a href="/cause/index" class="btn btn-base btn-lg ls-l" style="top:55%; left:80px;">Donate</a>
 
@@ -80,7 +80,7 @@
                                 <p>Run 4 Homeless Children The mission of Thomas House is to provide a safe, supportive environment and the resources necessary for homeless families with children to remain together while empowering them to become independent and self-sufficient. Walk, run or ride in a stroller across a gorgeous track. There are six physical bridges runners must cross and one tunnel to run through to reach the finish line. These represent the six hurdles that homeless families must cross to reach self-sufficiency, and passing through the tunnel represents Thomas House being the light at the end of the tunnel. This event is Saturday, March 28, 2015 at Mile Square Regional Park.
                                 </p>
                                 <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button" onclick="location.href='/donate/new/?charityid=172'">
-                                                        <span>Donate Unused Gift Card</span>
+                                                        <span>Donate Partially-Used Gift Card</span>
                                     </button>
                                 
                             </div>
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12" style="text-align: center;">
-                        <h3>Changefindr turns your unused gift cards into cash to go towards your favorite cause.</h3>
+                        <h3>Changefindr turns your partially-used gift cards into cash to go towards your favorite cause.</h3>
                         <br/>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                             <div class="col-md-6">
                                 <h2 class="title" style="text-align:center">Congratulations to 
                                     <a href="/cause/show/39">CoderDojo</a>
-                                     on their fundraiser.<br/> They were able to buy their first Lego Robotic Kit from unused gift card donations.</h2>
+                                     on their fundraiser.<br/> They were able to buy their first Lego Robotic Kit from partially-used gift card donations.</h2>
 
                                 <br/>
                                 <p>CoderDojo is a movement orientated around running free not-for-profit coding clubs and regular sessions for young people. At a CoderDojo, young people learn how to code, develop websites, apps, programs, games and more. Dojos are set up, run by and taught at by volunteers. Dojos organize tours of technology companies, bring in guest speakers to talk about their career and what they do, and organise events. In addition to learning to code, members meet like minded people, show off what they've been working on and so on. CoderDojo makes development and learning to code a fun, sociable, kick ass experience. CoderDojo also puts a strong emphasis on open source and free software, and has a strong network of members and volunteers globally.
