--- a/app/views/widgets/_merchantselectedlogo.html.erb
+++ b/app/views/widgets/_merchantselectedlogo.html.erb
@@ -17,9 +17,12 @@
         <div class="figure">
         	<img alt="" id="merchantlogo" src="<%=usermerchantlogo%>" class="img-responsive">     
         </div>
-        <div class="wp-block-body">
+
+        <div class="wp-block-body" style="text-align:center">
             <h2 class="title" id="merchantname"><%= usermerchantname %></h2>
-            <p></p>
+            <p>Card information can be found here.</p>
+            <img alt="" id="" src="/images/credit_card_helper.png" class="img-responsive">   
         </div>
+
     </div>
     </div>
