--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -99,7 +99,9 @@
                      <% if session[:user_firstname] == nil %>
 
                         <li class="dropdown">
-                        <a href="/#" class="dropdown-toggle" data-toggle="dropdown">Login</a>
+                        <a href="/#" class="dropdown-toggle" data-toggle="dropdown">Login
+                            <i class="icon-append fa fa-caret-down"></i>
+                        </a>
                         <ul class="dropdown-menu">
                             <li><a tabindex="-1" href="/sign_in">Sign in</a></li>
                             <li><a tabindex="-1" href="/sign_up">Register</a></li>
@@ -109,7 +111,10 @@
 
                     <% else %>
                         <li class="dropdown">
-                            <a href="/#" class="dropdown-toggle" data-toggle="dropdown">Hi <%= session[:user_firstname] %></a>
+                            <a href="/#" class="dropdown-toggle" data-toggle="dropdown">Hi <%= session[:user_firstname] %>
+                                <i class="icon-append fa fa-caret-down"></i>
+                            </a>
+                            
                             <ul class="dropdown-menu">
                                 <li><a tabindex="-1" href="/user/show/<%= session[:userid] %>">My Account</a></li>
 
