changed per bhn comments

--- a/app/views/donate/thankyou.html.erb
+++ b/app/views/donate/thankyou.html.erb
@@ -36,7 +36,9 @@
                         <!-- <li><a href="/donate/index/?userid=<%= session[:userid] %>">View Your Donations</a></li> -->
                         <li><a href="/giftcard/index">View My Gift Cards</a></li>
                         <li><a href="/cause/index">Donate Another Card</a></li>
-                        <li><a href="/merchant/index">Check Balance For Gift Card</a></li>     
+                        <li><a href="/merchant/index">Check Balance For Gift Card</a></li>
+                        <li><a href="/donate/index/?userid=<%= session[:userid] %>">View My Donations</a></li>
+                        
                                                       
                     </ul>
 
