--- a/app/views/giftcard/_giftcard_product.html.erb
+++ b/app/views/giftcard/_giftcard_product.html.erb
@@ -11,31 +11,50 @@
                     </span>
                     <br/><br/>
 
-            <p style="text-align:center">
+
+            <% if usergiftcard.isdonated == 1 %>
+
+                <p style="text-align:center">
                 <div style="text-align: center;">
 
-                
-                    <a href="/giftcard/refreshbalance?giftcardid=<%= usergiftcard.giftcardid %>" class="btn btn-sm btn-base btn-icon fa-refresh" onClick="this.disabled=true;">
-                        <span>Refresh</span>
-                    </a>
-
-                    
-                
-                    <br/><br/>
-                    <a href="/donate/new?giftcardid=<%= usergiftcard.giftcardid %>" class="btn btn-sm btn-base btn-icon fa-credit-card">
-                        <span>Donate</span>
-                    </a>
+                    <h4>Card Donated</h4>
+                    Click <a href='/donate/index/?userid=<%= session[:userid] %>'>here</a> to view your donations.
+                    <br/>
                 </div>
 
-            </p>
-            
-            <a href="/giftcard/delete/<%= usergiftcard.giftcardid %>" class="cart-remove" title="Remove item" style="color:#e80e1d" data-confirm="Are you sure you want to delete this?"><i class="fa fa-times-circle"></i>Delete</a>
+                 </p>
 
-            <% if session[:roleid] == 1 %>
-                <br/>
-                <a href="/giftcard/edit/<%= usergiftcard.giftcardid %>">Edit</a>
+            <% else %>      
 
+
+                <p style="text-align:center">
+                    <div style="text-align: center;">
+
+                    
+                        <a href="/giftcard/refreshbalance?giftcardid=<%= usergiftcard.giftcardid %>" class="btn btn-sm btn-base btn-icon fa-refresh" onClick="this.disabled=true;">
+                            <span>Refresh</span>
+                        </a>
+
+                        
+                    
+                        <br/><br/>
+                        <a href="/donate/new?giftcardid=<%= usergiftcard.giftcardid %>" class="btn btn-sm btn-base btn-icon fa-credit-card">
+                            <span>Donate</span>
+                        </a>
+                    </div>
+
+                </p>
             <% end %>
+
+             <% if usergiftcard.isdonated == 0 %>
+                <a href="/giftcard/delete/<%= usergiftcard.giftcardid %>" class="cart-remove" title="Remove item" style="color:#e80e1d" data-confirm="Are you sure you want to delete this?"><i class="fa fa-times-circle"></i>Delete</a>
+
+                <% if session[:roleid] == 1 %>
+                    <br/>
+                    <a href="/giftcard/edit/<%= usergiftcard.giftcardid %>">Edit</a>
+
+                <% end %>
+             <% end %>
             
     </div>
 
