--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
 <script src="<%= CLOUDFRONT_HOST %>/assets/owl-carousel/owl.carousel.js"></script>
 <script src="<%= CLOUDFRONT_HOST %>/assets/bootstrap/js/tooltip.js"></script>
 <script src="<%= CLOUDFRONT_HOST %>/assets/bootstrap/js/popover.js"></script>
+<script src="/assets/bootbox.min.js"></script>
 
 <!-- Sripts for individual pages, depending on what plug-ins are used -->
 <script src="<%= CLOUDFRONT_HOST %>/assets/layerslider/js/greensock.js" type="text/javascript"></script>
@@ -125,12 +126,33 @@ ul.ui-autocomplete {
         if !flash[:notice].blank? 
         
     %>
+    <script>
 
+        bootbox.dialog({
+          message: '<%= flash[:notice].html_safe %>',
+          title: '',
+          buttons: {
+            
+            main: {
+              label: "Okay",
+              className: "btn-primary",
+              callback: function() {
+                //Example.show("Primary button");
+              }
+            }
+          }
+        });
+
+
+       // bootbox.alert(message: '<%= flash[:notice].html_safe %>', function() {});
+    </script>
+
+<!--
         <div class="alert alert-info fade in" style="text-align:center">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
             <%= flash[:notice].html_safe %>
         </div>
-
+-->
       <% end %>
     <%= yield %>
      
@@ -142,6 +164,14 @@ ul.ui-autocomplete {
 
 
 <script>
+
+
+function alertMessage(message) {
+    bootbox.alert(message, function() { 
+    });
+}
+
+
     jQuery("#layerslider").layerSlider({
         pauseOnHover: true,
         autoPlayVideos: false,
@@ -305,6 +335,8 @@ try {
 
 
 </script>
+
+
 
 <!-- Boomerang App JS -->
 <script src="<%= CLOUDFRONT_HOST %>/js/wp.app.js"></script>
