--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 <script src="<%= CLOUDFRONT_HOST %>/assets/owl-carousel/owl.carousel.js"></script>
 <script src="<%= CLOUDFRONT_HOST %>/assets/bootstrap/js/tooltip.js"></script>
 <script src="<%= CLOUDFRONT_HOST %>/assets/bootstrap/js/popover.js"></script>
-<script src="/assets/bootbox.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/bootbox.min.js"></script>
 
 <!-- Sripts for individual pages, depending on what plug-ins are used -->
 <script src="<%= CLOUDFRONT_HOST %>/assets/layerslider/js/greensock.js" type="text/javascript"></script>
