fixed bug of gift card image not displaying

--- a/app/views/giftcard/_giftcard_product.html.erb
+++ b/app/views/giftcard/_giftcard_product.html.erb
@@ -1,7 +1,7 @@
 
-   <div class="wp-block product">
+   <div class="wp-block product" style="min-height: 472px;">
             <figure>
-                <img alt="" src="<%= CLOUDFRONT_HOST %>/<%= usergiftcard.merchant.logo.url%>" class="img-responsive img-center">
+                <img alt="" src="<%= usergiftcard.merchant.logo.url%>" class="img-responsive img-center">
             </figure>
             <h2 class="product-title"><a href="/giftcard/show/<%= usergiftcard.giftcardid %>"><%= usergiftcard.merchant.merchantname %></a></h2>
            
