testing bhn verify account for out of range

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -170,6 +170,7 @@ if session[:partnersite] != true %>
             </div><!--/.nav-collapse -->
         </div>
     </div>
+    <%= social_share_button_tag('some title') %>       
 <% end %>
 
 </header>        
