added code to for social links

--- a/app/views/donate/thankyou.html.erb
+++ b/app/views/donate/thankyou.html.erb
@@ -42,6 +42,12 @@
                                                       
                     </ul>
 
+                    <br/>
+                    <br/>
+                    <br/>
+                    <h5>Please share with your family and friends, so they can help this wonderful cause as well.</h5>
+                    <div id="share"></div>
+
                 </div>
                      <div class="col-sm-4" style="margin-top: 36px;">
                        <!-- SIDEBAR - BLOG -->
