--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,16 @@
 
 <!-- Main Image --> 
 
+<div class="row">
+    <div class="col-md-6">
+
+       
+        
+       <!-- <div id="socialshare" data-url="http://www.changefindr.com" data-text="Donate your partially and unused gift cards to causes at www.changefindr.com"></div> -->
+
+    </div>
+</div>
+</section>
 <section id="slider-wrapper" class="layer-slider-wrapper layer-slider-dynamic">
 <div id="layerslider" style="width:100%;height:520px;"> 
     <!-- Slide 1 -->
@@ -55,16 +65,15 @@
             Start typing and select the retailer on your gift card.</p>
         
         <h3 class="ls-l subtitle strong-400" style="width:500px;top:80%; left:80px;">Check your gift card balance instantly.
-
-
         </h3>
 
-       
+       <div id="share" class="ls-l visible-lg visible-md" style="width:500px;top:90%; left:80px;"></div>
 
     </div>
  
 </div>
-</section>
+
+
 
 
 
@@ -483,3 +492,16 @@
 </section>
 
 <br/><br/>
+<style>
+
+
+   
+
+</style>
+
+
+
+<script>
+
+   
+</script>
