--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,12 +54,30 @@
 <script src="<%= CLOUDFRONT_HOST %>/assets/layerslider/js/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
 <!-- Initializing the slider -->
 
+
+<link rel="stylesheet" type="text/css" href="/js/jquery_socialbar/jssocials.css" />
+<link rel="stylesheet" type="text/css" href="/js/jquery_socialbar/jssocials-theme-flat.css" />
+<script type="text/javascript" src="/js/jquery_socialbar/jssocials.min.js"></script>
+
+
 </head>
 <body>
 
 <%= render partial: "layouts/slidebar" %>
 
 <style>
+
+ .jssocials-share-link { 
+        border-radius: 50%; 
+
+    }
+
+    .jssocials-share-logo {
+  
+        color: white;
+
+    }
+
 
 a:link, a:visited, a:hover, a:active {
     color: #3498db;
@@ -171,6 +189,17 @@ ul.ui-autocomplete {
 
 <script>
 
+ try {
+        $("#share").jsSocials({
+            showLabel: false,
+            showCount: false,
+            shares: ["twitter", "facebook", "googleplus", "linkedin", "pinterest"],
+            url: "http://www.changefindr.com",
+            text: "Donate your unused or partially used gift cards to a worthy cause.",
+            logo: '<img src="<%= CLOUDFRONT_HOST %>/images/ChangefinderLogo-blue.png"  alt="Changefindr">'
+        });
+    } catch (Exception)
+    {}
 
 function alertMessage(message) {
     bootbox.alert(message, function() { 
@@ -329,9 +358,22 @@ try {
 
             //console.log("logo= ", item.logo);
 
-            return $('<li class="ui-menu-item-with-icon"></li>')
+            if (item.id != 85)
+            {
+                
+                merchantdisplayname = '"height="45px" width="75px"/>&nbsp;&nbsp;&nbsp;' + item.name
+                listheight = ''
+            } else
+            {
+                merchantdisplayname = '"height="45px" width="75px"/>&nbsp;&nbsp;&nbsp;Gift card not found, but you can still donate your card.  Click here.' 
+                listheight = 'style="height:100px;width:300px;word-wrap: break-word;"'
+            }
+
+            //console.log($( ".ui-autocomplete li" ));
+
+            return $('<li ' + listheight + ' class="ui-menu-item-with-icon"></li>')
                 .data("item.ui-autocomplete", item.merchantname)
-                .append('<a><img src="' + logourl + '"height="45px" width="75px">&nbsp;&nbsp;&nbsp;' + item.name + '</a>')
+                .append('<a><img src="' + logourl + merchantdisplayname + '</a>')
                 .appendTo(ul);
         };
 } catch (Exception) {}
