--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,13 @@
 <html>  
 <head>
 
+    <meta property="og:title" content="Donate your partially or unused gift cards to a worthy cause" />
+    <meta property="og:site_name" content="Changefindr - Donate your partially used gift cards"/>
+    <meta property="og:url" content="http://www.changefindr.com" />
+    <meta property="og:description" content="Donate Your Partially-Used Gift Cards.  Never Let Your Gift Cards Go To Waste! Donate Your Partially-Used Gift Cards To Your Favorite Cause And Feel Good About It." />
+    <meta property="fb:app_id" content="485395818249491" />
+    <meta property="og:image" content="<%= CLOUDFRONT_HOST %>/images/ChangefinderLogo-blue.png" />
+    
 
 	<%= render partial: "layouts/header" %>
 
@@ -55,9 +62,9 @@
 <!-- Initializing the slider -->
 
 
-<link rel="stylesheet" type="text/css" href="/js/jquery_socialbar/jssocials.css" />
-<link rel="stylesheet" type="text/css" href="/js/jquery_socialbar/jssocials-theme-flat.css" />
-<script type="text/javascript" src="/js/jquery_socialbar/jssocials.min.js"></script>
+<link rel="stylesheet" type="text/css" href="<%= CLOUDFRONT_HOST %>/js/jquery_socialbar/jssocials.css" />
+<link rel="stylesheet" type="text/css" href="<%= CLOUDFRONT_HOST %>/js/jquery_socialbar/jssocials-theme-flat.css" />
+<script type="text/javascript" src="<%= CLOUDFRONT_HOST %>/js/jquery_socialbar/jssocials.min.js"></script>
 
 
 </head>
