--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,12 @@
 <html>  
 <head>
 
-    <meta property="og:title" content="Donate your partially or unused gift cards to a worthy cause" />
+    <meta property="og:title" content="Check your gift card balance in one place instantly.  Donate your partially or unused gift cards to a worthy cause" />
     <meta property="og:site_name" content="Changefindr - Donate your partially used gift cards"/>
     <meta property="og:url" content="http://www.changefindr.com" />
-    <meta property="og:description" content="Donate Your Partially-Used Gift Cards.  Never Let Your Gift Cards Go To Waste! Donate Your Partially-Used Gift Cards To Your Favorite Cause And Feel Good About It." />
+    <meta property="og:description" content="Never Let Your Gift Cards Go To Waste! Donate Your Partially-Used Gift Cards To Your Favorite Cause And Feel Good About It." />
     <meta property="fb:app_id" content="485395818249491" />
-    <meta property="og:image" content="<%= CLOUDFRONT_HOST %>/images/ChangefinderLogo-blue.png" />
+    <meta property="og:image" content="<%= CLOUDFRONT_HOST %>/images/ChangefinderLogo-blue-fb.png" />
     
 
 	<%= render partial: "layouts/header" %>
