--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>  
 <head>
 
-    <meta property="og:title" content="Check your gift card balance in one place instantly.  Donate your partially or unused gift cards to a worthy cause" />
+    <meta property="og:title" content="Check your gift card balance instantly in one place.  Donate your partially or unused gift cards to a worthy cause" />
     <meta property="og:site_name" content="Changefindr - Donate your partially used gift cards"/>
     <meta property="og:url" content="http://www.changefindr.com" />
     <meta property="og:description" content="Never Let Your Gift Cards Go To Waste! Donate Your Partially-Used Gift Cards To Your Favorite Cause And Feel Good About It." />
