modified for fb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>  
 <head>
 
-    <meta property="og:title" content="Check your gift card balance instantly in one place.  Donate your partially or unused gift cards to a worthy cause" />
+    <meta property="og:title" content="Check your gift card balance instantly in one place and donate your partially or unused gift cards to a worthy cause" />
     <meta property="og:site_name" content="Changefindr - Donate your partially used gift cards"/>
     <meta property="og:url" content="http://www.changefindr.com" />
     <meta property="og:description" content="Never Let Your Gift Cards Go To Waste! Donate Your Partially-Used Gift Cards To Your Favorite Cause And Feel Good About It." />
@@ -202,7 +202,7 @@ ul.ui-autocomplete {
             showCount: false,
             shares: ["twitter", "facebook", "googleplus", "linkedin", "pinterest"],
             url: "http://www.changefindr.com",
-            text: "Donate your unused or partially used gift cards to a worthy cause.",
+            text: "Check your gift card balance instantly in one place and donate your partially or unused gift cards to a worthy cause",
             logo: '<img src="<%= CLOUDFRONT_HOST %>/images/ChangefinderLogo-blue.png"  alt="Changefindr">'
         });
     } catch (Exception)
